Add homepage images and SVG assets; update layout to conditionally render navigation and footer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,16 @@ import Footer from "../components/Layout/Footer.astro";
 interface Props {
   title: string;
   description?: string;
+  showNavigation?: boolean;
+  showFooter?: boolean;
 }
 
-const { title, description }: Props = Astro.props;
+const {
+  title,
+  description,
+  showNavigation = true,
+  showFooter = true,
+}: Props = Astro.props;
 
 // Set Up
 // 1. Head
@@ -22,8 +29,8 @@ const { title, description }: Props = Astro.props;
   <Head title={title} description={description} />
   <Themes />
   <body>
-    <Navigation />
+    {showNavigation && <Navigation />}
     <slot />
-    <Footer />
+    {showFooter && <Footer />}
   </body>
 </html>
