--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import logo from "../assets/navLogo.png";
 ---
 
 <Layout
-  title="99 Nights in the Forest"
+  title="Home"
   description="Claim Roblox items for survival in 99 Nights in the Forest."
   showFooter={false}
 >
